AM_CPPFLAGS = -I$(srcdir)/../../headers -I$(srcdir)/../.. -I$(srcdir)/../../files \
	-I$(srcdir)/../../shapes $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS)

noinst_LTLIBRARIES = libshapeinf.la

libshapeinf_la_SOURCES = \
	ammoinf.cc	\
	ammoinf.h	\
	aniinf.cc	\
	aniinf.h	\
	armorinf.cc	\
	armorinf.h	\
	bodyinf.cc	\
	bodyinf.h	\
	continf.cc	\
	continf.h	\
	effhpinf.cc	\
	effhpinf.h	\
	expinf.cc	\
	expinf.h	\
	frnameinf.cc	\
	frnameinf.h	\
	frflags.cc	\
	frflags.h	\
	frusefun.cc	\
	frusefun.h	\
	monstinf.cc	\
	monstinf.h	\
	npcdollinf.cc	\
	npcdollinf.h	\
	objdollinf.cc	\
	objdollinf.h	\
	sfxinf.cc	\
	sfxinf.h	\
	warminf.cc	\
	warminf.h	\
	weaponinf.cc	\
	weaponinf.h

CLEANFILES = *~

